--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.8.0",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
