feat: Add Excel export for dashboard overview
- Add logic to generate .xlsx with matching visual layout
- Add Export button to Dashboard header
- Install exceljs and file-saver

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@opentelemetry/api": "^1.9.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^12.8.0",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
